--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
             </intent-filter>
         </activity>
 
-        <service android:name="io.hamed.floatinglayout.FloatingLayoutService" />
+        <service android:name="io.hamed.floatinglayout.service.FloatingService"/>
 
     </application>
 
